--- a/css/component.css
+++ b/css/component.css
@@ -27,6 +27,19 @@ footer{
 }
 
 
+#loader{
+	height: 100vh;
+	width: 100vw;
+	background-color: white;
+	z-index: 19;
+	position: fixed;
+	top: 0;
+	
+	-webkit-transition: all 1s;
+	-moz-transition: all 1s;
+	-o-transition: all 1s;
+	transition: all 1s;
+}
 
 
 /* General style */
