--- a/css/component.css
+++ b/css/component.css
@@ -786,7 +786,7 @@ stroke:white;
 
 
 #gallery_darcria{
-	background-image: url('../img/large/Vier-Nev-Dar-Cria-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.png');
+	background-image: url('../img/large/Vier-Nev-Dar-Cria-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.jpg');
 	background-size: 100% auto;
 	width: 94vw;
 	height: 40vh;
@@ -797,7 +797,7 @@ stroke:white;
 
 #gallery_darcria:hover{
 
-background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.png');
+background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.jpg');
 
 }
 
@@ -1396,13 +1396,13 @@ transition: all 1s;
 }
 
 #gallery_darcria{
-	background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-VR-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.png');
+	background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-VR-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.jpg');
 	
 }
 	
 	#gallery_darcria:hover{
 
-background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-VR-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.png');
+background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-VR-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.jpg');
 
 }
 	
@@ -1431,13 +1431,13 @@ background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-VR-Virtual-Reality-Ex
 	width: 70%;
 }
 	#gallery_darcria{
-	background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-Small-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.png');
+	background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-Small-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.jpg');
 	
 }
 	
 	#gallery_darcria:hover{
 
-background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-Small-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.png');
+background-image: url('../img/large/Vier-Nev-Dar-Cria-Logo-Small-Virtual-Reality-Experience-Art-Multistable-Perception-Optical-Illusion.jpg');
 
 }
 	
