--- a/css/component.css
+++ b/css/component.css
@@ -3,81 +3,93 @@
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-ThinItalic.ttf');
-	 font-weight: "100i";
+	 font-weight: 100;
+	font-style:italic;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Thin.ttf');
-	 font-weight: "100";
+	 font-weight: 100;
+	font-style:normal;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Italic.ttf');
-	 font-weight: "400i";
+	 font-weight: 400;
+	font-style:italic;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-MediumItalic.ttf');
-	 font-weight: "500i";
+	 font-weight: 500;
+	font-style:italic;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Medium.ttf');
-	 font-weight: "500";
+	 font-weight: 500;
+	font-style:normal;
 }
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-BoldItalic.ttf');
-	 font-weight: "700i";
+	 font-weight: 700;
+	font-style:italic;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Bold.ttf');
-	 font-weight: "700";
+	 font-weight: 700;
+	font-style:normal;
 }
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-BlackItalic.ttf');
-	 font-weight: "900i";
+	 font-weight: 900;
+	font-style:italic;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Black.ttf');
-	 font-weight: "900";
+	 font-weight: 900;
+	font-style:normal;
 }
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-LightItalic.ttf');
-	 font-weight: "300i";
+	 font-weight: 300;
+	font-style:italic;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Light.ttf');
-	 font-weight: "300";
+	 font-weight:300;
+	font-style:normal;
 }
 
 
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto/Roboto-Regular.ttf');
-	 font-weight: "400";
+	 font-weight: 400;
+	font-style:normal;
 }
 
 body {
