--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2061,6 +2061,70 @@ section.lazy-placeholder:after {
 .cid-rAE9OROZTy .mbr-section-btn {
   color: #ebeefd;
 }
+.cid-seFx60ivdC {
+  padding-top: 75px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-seFx60ivdC .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-seFx60ivdC .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-seFx60ivdC .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-seFx60ivdC .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-seFx60ivdC .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-seFx60ivdC .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-seFx60ivdC .mbr-gallery-item > div:hover:before {
+  opacity: 0.8 !important;
+}
+.cid-seFx60ivdC .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-seFx60ivdC .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.8;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-rAEIzs2hqs {
   padding-top: 30px;
   padding-bottom: 30px;
